# Ripple_Analytics

./: .env.example  .gitignore  AUTO_UPDATE_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVIN_IOS_APP_TASK.md  DEVIN_TASK_BRIEF.md  DEVIN_WATCH_APP_TASK.md  DEVIN_WINDOWS_APP_TASK.md  HIGH_MAGNITUDE_ITERATIONS.md  LICENSE  README.md  SECURITY_IMPLEMENTATION.md  TASK_ACCOUNTING.md  TASK_BIOLOGY.md  TASK_CHEMISTRY.md  TASK_ECONOMICS.md  TASK_ELECTRIC_ACCOUNTING.md  TASK_ELECTRIC_BIOLOGY.md  TASK_ELECTRIC_CHEMISTRY.md  TASK_ELECTRIC_ECONOMICS.md  TASK_ELECTRIC_ENGINEERING.md  TASK_ELECTRIC_MATHEMATICS.md  TASK_ELECTRIC_MOATS.md  TASK_ELECTRIC_ORGANIZATIONAL.md  TASK_ELECTRIC_PHYSICS.md  TASK_ELECTRIC_PHYSIOLOGY.md  TASK_ELECTRIC_PSYCHOLOGY.md  TASK_ELECTRIC_THINKING-TOOLS.md  TASK_ENGINEERING.md  TASK_MATHEMATICS.md  TASK_MOATS.md  TASK_ORGANIZATIONAL.md  TASK_PHYSICS.md  TASK_PHYSIOLOGY.md  TASK_PSYCHOLOGY.md  TASK_THINKING-TOOLS.md  deps.edn  docker-compose.prod.yml  docker-compose.yml  (+5 more)
desktop/: Cargo.toml  MentalModels.bat  MentalModels.ps1  MentalModelsGUI.bat  README.md  Start-MentalModels.ps1  deps.edn  main.js  run.bat  run.sh  update.bat
desktop/.cpcache/: 2016322615.basis  2016322615.cp
desktop/src/: main.rs
desktop/src/mental_models/desktop/: cli.clj  db.clj  error_handler.clj  extractor.clj  watcher.clj
desktop/src/mental_models/desktop/api/: web_client.clj
desktop/src/mental_models/desktop/export/: manager.clj
desktop/src/mental_models/desktop/gui/: app.clj  panels.clj  scanner.clj  slack_monitor.clj  swing_app.clj
desktop/src/mental_models/desktop/notifications/: manager.clj
desktop/src/mental_models/desktop/search/: engine.clj
desktop/src/mental_models/desktop/settings/: sync.clj
desktop/src/mental_models/desktop/updater/: auto_rollback.clj  blue_green.clj  concurrency.clj  continuous_deploy.clj  delta_updater.clj  download_manager.clj  edge_cases.clj  github_checker.clj  hot_loader.clj  hot_reload.clj  job_handoff.clj  logging_reporter.clj  multi_update.clj  network.clj  security.clj  state_persistence.clj  ui_integration.clj  (+2 more)
desktop/test/mental_models/: code_quality_test.clj  resilient_download_test.clj
windows/: Cargo.toml
windows/src/: harvester.rs  main.rs
windows/ui/: package.json
windows/ui/src/: App.tsx
(+1466 files in other folders)
